# wpl.vs

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
build.props/: vssdk.cmake
build.props/stub/logger/: log.h
make/: wpl.vs.sln
make/build.props/: config.props  config.tests.props  vssdk.cmake  vssdk.props  wpl.include.props
samples/styles-discover/: CMakeLists.txt  extension.vs10.vsixmanifest  extension.vsixmanifest  main.cpp  models.cpp  models.h  styles-discover.def  styles-discover.pkgdef  styles-discover.ui.vcxproj  styles-discover.vcxproj  styles-discover_package.cpp
samples/styles-discover/resources/: command-ids.h  commands.vsct  resource.h  styles-discover_ui.rc
src/: CComObjectEx.h  CMakeLists.txt  async.cpp  async.h  factory.cpp  frame.cpp  frame.h  ole-command-target.cpp  package.cpp  pane.cpp  pane.h  vspackage.cpp  wpl.vs.vcxproj  wpl.vs.vcxproj.filters
src/fallback/logger/: log.h
tests/: CMakeLists.txt  CommandTargetTests.cpp  wpl.vs.tests.vcxproj
wpl/vs/: com.h  command-target.h  command.h  factory.h  ole-command-target.h  package.h  pane.h  vspackage.h
